--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="content">
 				<canvas class="scene scene--full" id="scene"></canvas>
 				<div class="content__inner">
-					<h2 class="content__title">Data Modelling</h2>
+					<h2 class="content__title">Data Modeling</h2>
 					<h3 class="content__subtitle">and Machine Learning</h2>
 				</div>
 			</div>
