--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 					<img src="img/logo.png"  class="codrops-header__title">
 					<p>Theoretical uniform distribution & Ky</p>
 				</header>
+				<nav class="codrops-links">
+						<ul>
+							<li><a href="">Data Science News</a></li>
+							<li><a href="">About</a></li>
+						</ul>
+					</nav>
 			</div>
 			<div class="content">
 				<canvas class="scene scene--full" id="scene"></canvas>
