--- a/index.html
+++ b/index.html
@@ -22,19 +22,30 @@
 					<p>Theoretical uniform distribution & Ky</p>
 				</header>
 				<nav class="codrops-links">
+					<ul>
+						<li><a href="">Data Science News</a></li>
+						<li><a href="">About</a></li>
+					</ul>
+				</nav>
+				<footer>
+					<nav class="codrops-links">
 						<ul>
-							<li><a href="">Data Science News</a></li>
-							<li><a href="">About</a></li>
+							<li><a href="">Email</a></li>
+							<li><a href="">Company Address</a></li>
 						</ul>
 					</nav>
+				</footer>
 			</div>
+			
 			<div class="content">
 				<canvas class="scene scene--full" id="scene"></canvas>
 				<div class="content__inner">
 					<h2 class="content__title">Data Modeling</h2>
 					<h3 class="content__subtitle">and pattern recognition</h2>
 				</div>
+			
 			</div>
+			
 		</main>
 		<script src="js/demo.js"></script>
 		<script src="js/three.min.js"></script>
