--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				</header>
 				<nav class="codrops-links">
 					<ul>
-						<li><a href="">Data Science News</a></li>
-						<li><a href="">About</a></li>
+						<li><a href="news.html">Data Science News</a></li>
+						<li><a href="about.html">About</a></li>
 					</ul>
 				</nav>
 				<footer>
