--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<img src="img/logo.png"  class="codrops-header__title">
 					<p>Theoretical uniform distribution & Ky</p>
 				</header>
-				<nav class="codrops-links">
+				<nav class="codrops-links header-links">
 					<ul>
 						<li><a href="news.html">Data Science News</a></li>
 						<li><a href="about.html">About</a></li>
@@ -36,16 +36,16 @@
 					</nav>
 				</footer>
 			</div>
-			
-			<div class="content">
+
+			<div class="content main">
 				<canvas class="scene scene--full" id="scene"></canvas>
 				<div class="content__inner">
 					<h2 class="content__title">Data Modeling</h2>
 					<h3 class="content__subtitle">and pattern recognition</h2>
 				</div>
-			
+
 			</div>
-			
+
 		</main>
 		<script src="js/demo.js"></script>
 		<script src="js/three.min.js"></script>
