--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>jQuery Plugin - Social Stream Network Wall</title>
-<link rel="stylesheet" type="text/css" href="layout.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/layout.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/dcsns_wall.css" media="all" />
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@ jQuery(document).ready(function($){
 	$('#social-stream').dcSocialStream({
 		feeds: {
 			twitter: {
-				id: 'designchemical'
+				id: '#puso'
 			},
 			rss: {
 				id: 'http://feeds.feedburner.com/DesignChemical',
