fixes news layout

--- a/news.html
+++ b/news.html
@@ -64,11 +64,15 @@ h3 {text-align: center;}
 		<main>
 				<div class="content content--fixed">
 					<header class="codrops-header">
-						<img src="img/logo.png"  class="codrops-header__title">
-						<p>Theoretical uniform distribution & Ky</p>
+						<a href="/">
+							<img src="img/logo.png"  class="codrops-header__title">
+						</a>
+							<p>Theoretical uniform distribution & Ky</p>
+						
 					</header>
 					<nav class="codrops-links header-links">
-						<ul>
+						<ul style="margin-top:1.5em;">
+							<li><a href="/">Home</a></li>
 							<li><a href="news.html">Data Science News</a></li>
 							<li><a href="about.html">About</a></li>
 						</ul>
@@ -83,7 +87,7 @@ h3 {text-align: center;}
 					</footer>
 				</div>
 
-				<div class="content main">
+				<div class="content news">
 						<div id="">
 								<div id="">
 								<!-- Begin Question Block -->
