--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
 	<body class="demo-5">
 		<main>
 			<div class="content content--fixed">
+			
 				<header class="codrops-header">
-					<img src="img/logo.png"  class="codrops-header__title">
-					<p>Theoretical uniform distribution & Ky</p>
+					<a href="/">
+						<img src="img/logo.png"  class="codrops-header__title">
+					</a>
+						<p>Theoretical uniform distribution & Ky</p>
+					
 				</header>
+				
 				<nav class="codrops-links header-links">
 					<ul>
+						<li><a href="/">Home</a></li>
 						<li><a href="news.html">Data Science News</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
