--- a/news.html
+++ b/news.html
@@ -2,19 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>jQuery Plugin - Social Stream Network Wall</title>
+<title>Tuky Software development</title>
 
 <link rel="stylesheet" type="text/css" href="css/layout.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/dcsns_wall.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/base.css" />
 <link rel="stylesheet" type="text/css" href="css/demo5.css" />
+<link href="https://fonts.googleapis.com/css?family=Barlow:400,500,700|Vidaloka" rel="stylesheet">
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script type="text/javascript" src="inc/js/jquery.plugins.js"></script>
 <script type="text/javascript" src="inc/js/jquery.site.js"></script>
 <script type="text/javascript" src="js/jquery.social.stream.wall.1.8.js"></script>
 <script type="text/javascript" src="js/jquery.social.stream.1.6.2.js"></script>
-
+<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 <script type="text/javascript">
 jQuery(document).ready(function($){
 	$('#social-stream').dcSocialStream({
