--- a/news.html
+++ b/news.html
@@ -15,26 +15,27 @@
 <script type="text/javascript" src="inc/js/jquery.site.js"></script>
 <script type="text/javascript" src="js/jquery.social.stream.wall.1.8.js"></script>
 <script type="text/javascript" src="js/jquery.social.stream.1.6.2.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 
 <script type="text/javascript">
 jQuery(document).ready(function($){
 	$('#social-stream').dcSocialStream({
 		feeds: {
 			rss: {
-				id: 'http://aitrends.com/feed',
+				id: '',
 				out: 'intro,thumb,title,text,share'
 			},
-			google: {
-				id: '107785538899595981479'
-			},
-			vimeo: {
-				id: 'Advanced Machine Learning - 2016'
-			},
-			youtube: {
-				id: 'channel/UCDS20hpBFiv_Kdp5Ibh0vew',
-				thumb: 'medium',
-				out: 'intro,thumb,title,user,share'
-			}
+			// google: {
+			// 	id: '107785538899595981479'
+			// },
+			// vimeo: {
+			// 	id: 'Advanced Machine Learning - 2016'
+			// },
+			// youtube: {
+			// 	id: 'channel/UCDS20hpBFiv_Kdp5Ibh0vew',
+			// 	thumb: 'medium',
+			// 	out: 'intro,thumb,title,user,share'
+			// }
 		},
 		rotate: {
 			delay: 0
