removes js error

--- a/news.html
+++ b/news.html
@@ -13,8 +13,8 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script type="text/javascript" src="inc/js/jquery.plugins.js"></script>
 <script type="text/javascript" src="inc/js/jquery.site.js"></script>
-<script type="text/javascript" src="js/jquery.social.stream.wall.1.8.js"></script>
-<script type="text/javascript" src="js/jquery.social.stream.1.6.2.js"></script>
+<!-- <script type="text/javascript" src="js/jquery.social.stream.wall.1.8.js"></script>
+<script type="text/javascript" src="js/jquery.social.stream.1.6.2.js"></script> -->
 <script type="text/javascript" src="js/app.js"></script>
 
 <script type="text/javascript">
