--- a/news.html
+++ b/news.html
@@ -14,17 +14,17 @@
 <script type="text/javascript" src="inc/js/jquery.plugins.js"></script>
 <script type="text/javascript" src="inc/js/jquery.site.js"></script>
 <script type="text/javascript" src="js/jquery.social.stream.wall.1.8.js"></script>
-<!-- <script type="text/javascript" src="js/jquery.social.stream.1.6.2.js"></script> -->
+<script type="text/javascript" src="js/jquery.social.stream.1.6.2.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 
 <script type="text/javascript">
 jQuery(document).ready(function($){
 	$('#social-stream').dcSocialStream({
 		feeds: {
-			rss: {
-				id: '',
-				out: 'intro,thumb,title,text,share'
-			},
+			// rss: {
+			// 	id: '',
+			// 	out: 'intro,thumb,title,text,share'
+			// },
 			// google: {
 			// 	id: '107785538899595981479'
 			// },
