--- a/about.html
+++ b/about.html
@@ -44,12 +44,27 @@
 			</div>
 
 			<div class="content main">
-				<canvas class="scene scene--full" id="scene"></canvas>
 				<div class="content__inner">
-					<h2 class="content__title">Data Modeling</h2>
-					<h3 class="content__subtitle">and pattern recognition</h2>
+					<h3 class="content__subtitle">About Us</h2>
 				</div>
+<p>Tuky Data Research Ltd., <br>
+apt. 47, 30A<br>
+Vazha-Pshavela Avenue<br>
+Tbilisi 0160<br>
+Georgia<br>
+Company. Reg no: N171480794
+<br>
+Tuky is an Agency Trade Desk for the MENA region.<br>
+Managed by perfomance & DR experts, we deliver results, such as:<br>
+- lead gen for Solar, Finance, Auto<br>
+- app installs<br>
+- tele-sales leads<br>
+<br>
+We build & maintain our own algorithms, in-house data science and BI teams.
+<br>
+Contact us today for a quote.
 
+</p>
 			</div>
 
 		</main>
