--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 					<ul>
 						<li><a href="/">Home</a></li>
 						<li><a href="news.html">Data Science News</a></li>
-						<li><a href="about.html">About</a></li>
+						<li><a href="about.html">About Us</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<nav class="codrops-links">
 						<ul>
-							<li><a href="">Email</a></li>
-							<li><a href="">Company Address</a></li>
+							<li><a href="">Contact Us</a></li>
+							<li><a href="privacy.html">Your Privacy</a></li>
 						</ul>
 					</nav>
 				</footer>
