--- a/privacy.html
+++ b/privacy.html
@@ -52,6 +52,7 @@ Company. Reg no: N171480794
 
 <h1>Privacy Policy of <strong>Tuky Data Research Ltd.</strong></h1>
 
+</div> <!-- /header -->
 
           
 <div class="one_line_col">
@@ -360,13 +361,93 @@ In addition to any opt out offered by any of the services below, the User may op
 
     </div> <!-- /one_line_col -->
 
+	<div class="one_line_col">
+		<h2 id="cookie_policy">Cookie Policy</h2>
+		<p>This Application uses Cookies. To learn more and for a detailed cookie notice, you may consult the <a href="//www.iubenda.com/privacy-policy/326205/cookie-policy" title="Cookie Policy" class="show_comp_link iframe-preserve an-preserve">Cookie Policy</a>.</p>
+	</div> <!-- /one_line_col -->	
 
+<div class="one_line_col">
+
+  <h2 id="further_data_processing_info">Additional information about Data collection and processing</h2>
+
+  <h3>Legal action</h3>
+  <p>
+    The User's Personal Data may be used for legal purposes by the Data Controller, in Court or in the stages leading to possible legal action arising from improper use of this Application or the related services.<br />The User declares to be aware that the Data Controller may be required to reveal personal data upon request of public authorities.
+  </p>
+
+  <h3>Additional information about User's Personal Data</h3>
+  <p>
+    In addition to the information contained in this privacy policy, this Application may provide the User with additional and contextual information concerning particular services or the collection and processing of Personal Data upon request.
+  </p>
+
+  <h3>System logs and maintenance</h3>
+  <p>
+    For operation and maintenance purposes, this Application and any third party services may collect files that record interaction with this Application (System logs) or use for this purpose other Personal Data (such as IP Address).
+  </p>
+
+  <h3>Information not contained in this policy</h3>
+  <p>
+    More details concerning the collection or processing of Personal Data may be requested from the Data Controller at any time. Please see the contact information at the beginning of this document.
+  </p>
+
+  <h3>The rights of Users</h3>
+  <p>
+    Users have the right, at any time, to know whether their Personal Data has been stored and can consult the Data Controller to learn about their contents and origin, to verify their accuracy or to ask for them to be supplemented, cancelled, updated or corrected, or for their transformation into anonymous format or to block any data held in violation of the law, as well as to oppose their treatment for any and all legitimate reasons. Requests should be sent to the Data Controller at the contact information set out above.
+  </p>
+	  <p>
+	    This Application does not support “Do Not Track” requests.<br />To determine whether any of the third party services it uses honor the “Do Not Track” requests, please read their privacy policies.
+	  </p>
+
+  <h3>Changes to this privacy policy</h3>
+  <p>
+    The Data Controller reserves the right to make changes to this privacy policy at any time by giving notice to its Users on this page. It is strongly recommended to check this page often, referring to the date of the last modification listed at the bottom. If a User objects to any of the changes to the Policy, the User must cease using this Application and can request that the Data Controller remove the Personal Data. Unless stated otherwise, the then-current privacy policy applies to all Personal Data the Data Controller has about Users.
+  </p>
+
+</div> <!-- /one_line_col -->
+
+<div class="one_line_col">
+
+  <div class="box_primary box_10 definitions expand">
+
+    <h3 class="expand-click w_icon_24 icon_ribbon">
+    	Definitions and legal references
+    </h3>
+
+    <div class="expand-content">
+
+      <h4>Personal Data (or Data)</h4>
+      <p>Any information regarding a natural person, a legal person, an institution or an association, which is, or can be, identified, even indirectly, by reference to any other information, including a personal identification number.</p>
+
+      <h4>Usage Data</h4>
+      <p>Information collected automatically from this Application (or third party services employed in this Application), which can include: the IP addresses or domain names of the computers utilized by the Users who use this Application, the URI addresses (Uniform Resource Identifier), the time of the request, the method utilized to submit the request to the server, the size of the file received in response, the numerical code indicating the status of the server's answer (successful outcome, error, etc.), the country of origin, the features of the browser and the operating system utilized by the User, the various time details per visit (e.g., the time spent on each page within the Application) and the details about the path followed within the Application with special reference to the sequence of pages visited, and other parameters about the device operating system and/or the User's IT environment.</p>
+
+      <h4>User</h4>
+      <p>The individual using this Application, which must coincide with or be authorized by the Data Subject, to whom the Personal Data refers.</p>
+
+      <h4>Data Subject</h4>
+      <p>The legal or natural person to whom the Personal Data refers.</p>
+
+      <h4>Data Processor (or Data Supervisor)</h4>
+      <p>The natural person, legal person, public administration or any other body, association or organization authorized by the Data Controller to process the Personal Data in compliance with this privacy policy.</p>
+
+      <h4>Data Controller (or Owner)</h4>
+      <p>The natural person, legal person, public administration or any other body, association or organization with the right, also jointly with another Data Controller, to make decisions regarding the purposes, and the methods of processing of Personal Data and the means used, including the security measures concerning the operation and use of this Application. The Data Controller, unless otherwise specified, is the Owner of this Application.</p>
+
+      <h4>This Application</h4>
+      <p>The hardware or software tool by which the Personal Data of the User is collected.</p>
+
+            <h4>Cookies</h4>
+            <p>Small piece of data stored in the User's device.</p>
+
+
+      <hr />
+	  </div>
 			
 
 
 
 
-  <div id="wbars_all">
+<div id="wbars_all">
       <div class="iub_container iub_base_container">
         <div id="wbars">
           <div class="iub_content legal_pp">
@@ -1385,6 +1466,23 @@ US
 
       </div> <!-- /container base_container -->
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
