--- a/privacy.html
+++ b/privacy.html
@@ -13,6 +13,22 @@
 		<link rel="stylesheet" type="text/css" href="css/demo5.css" />
 		<link rel="stylesheet" type="text/css" href="pater/pater.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+
+  <script src="js/privacy_policy.js" type="text/javascript"></script>
+
+  <style>
+    .for_boxes li {
+      list-style: none;
+    }
+    .for_boxes li .box_primary {
+      display: block;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+    }
+
+  </style>
+
+
 	</head>
 	<body class="demo-5">
 		<main>
@@ -1448,8 +1464,7 @@ US
           </div>
 
 
-<link href="https://www.iubenda.com/assets/privacy_policy-dfbc51fbaff5ee29c944bb9407da000f.css" media="screen" rel="stylesheet" type="text/css" />
-<script src="https://www.iubenda.com/assets/privacy_policy-474d8657e20b2d06a569c0471da4c0c6.js" type="text/javascript"></script>
+
 
 <script type="text/javascript">
 
