--- a/privacy.html
+++ b/privacy.html
@@ -11,11 +11,15 @@
 		<link href="https://fonts.googleapis.com/css?family=Barlow:400,500,700|Vidaloka" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo5.css" />
-		<link rel="stylesheet" type="text/css" href="pater/pater.css" />
+    <link rel="stylesheet" type="text/css" href="pater/pater.css" />
+		<link rel="stylesheet" type="text/css" href="https://www.iubenda.com/assets/privacy_policy-dfbc51fbaff5ee29c944bb9407da000f.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 
   <script src="js/privacy_policy.js" type="text/javascript"></script>
 
+<style type="text/css">#iubenda_policy #wbars {height:694px;}
+#iubenda_policy .iub_container > .iub_footer {  -webkit-box-shadow: none;  -moz-box-shadow: none;  box-shadow: none;  border-top: 1px solid #DDD; }
+#iubenda_policy.iubenda_vip_policy.iubenda_fixed_policy .iub_container {max-width: none; padding-top: 0;}</style>
   <style>
     .for_boxes li {
       list-style: none;
@@ -31,7 +35,7 @@
 
 	</head>
 	<body class="demo-5">
-		<main>
+		<main id="iubenda_policy">
 			<div class="content content--fixed">
 			
 				<header class="codrops-header">
