--- a/privacy.html
+++ b/privacy.html
@@ -35,7 +35,7 @@
 
 	</head>
 	<body class="demo-5">
-		<main id="iubenda_policy">
+		<main>
 			<div class="content content--fixed">
 			
 				<header class="codrops-header">
@@ -469,7 +469,7 @@ In addition to any opt out offered by any of the services below, the User may op
 
 
 
-
+<div id="iubenda_policy">
 <div class="iub_content legal_pp">
 
 
@@ -1469,6 +1469,9 @@ US
 
 
 
+</div>
+		</main>
+    
 
 <script type="text/javascript">
 
@@ -1495,8 +1498,6 @@ US
     });
 
   </script>
-
-		</main>
 		<script src="js/demo.js"></script>
 		<script src="js/three.min.js"></script>
 		<script src="js/perlin.js"></script>
