--- a/privacy.html
+++ b/privacy.html
@@ -16,17 +16,22 @@
 
   <script src="js/privacy_policy.js" type="text/javascript"></script>
 
-<style type="text/css">#iubenda_policy #wbars {height:694px;}
-#iubenda_policy .iub_container > .iub_footer {  -webkit-box-shadow: none;  -moz-box-shadow: none;  box-shadow: none;  border-top: 1px solid #DDD; }
-#iubenda_policy.iubenda_vip_policy.iubenda_fixed_policy .iub_container {max-width: none; padding-top: 0;}</style>
   <style>
+    .for_boxes ul {
+      padding: 10px;
+    }
     .for_boxes li {
       list-style: none;
+      padding: 0 10px;
     }
     .for_boxes li .box_primary {
       display: block;
       border: 1px solid #ccc;
       border-radius: 3px;
+    }
+    .conteiner {
+      max-width: 960px;
+      margin: 0 auto;
     }
 
   </style>
@@ -73,7 +78,8 @@ Company. Reg no: N171480794
 
 </div> <!-- /header -->
 
-          
+
+<div class="conteiner">        
 <div class="one_line_col">
 
   <h2 id="owner_of_the_data">Data Controller and Owner</h2>
@@ -1469,6 +1475,7 @@ US
 
 
 </div>
+</div>  
 		</main>
 
 
