--- a/privacy.html
+++ b/privacy.html
@@ -17,21 +17,45 @@
   <script src="js/privacy_policy.js" type="text/javascript"></script>
 
   <style>
-    .for_boxes ul {
-      padding: 10px;
+    .for_boxes {
+      padding: 0px;
     }
     .for_boxes li {
       list-style: none;
-      padding: 0 10px;
     }
     .for_boxes li .box_primary {
       display: block;
       border: 1px solid #ccc;
       border-radius: 3px;
+      padding: 0 10px;
+      margin-bottom: 20px;
+      cursor: pointer;
     }
     .conteiner {
-      max-width: 960px;
+      max-width: 1200px;
       margin: 0 auto;
+      padding: 0 10px;
+    }
+     .conteiner .expand.collapsed .expand-click:after {
+        content: "";
+        position: absolute;
+        right: 10px;
+        top: 17px;
+        border: 5px;
+        border-color: transparent;
+        border-style: solid;
+        border-right-color: #333b43;
+    }
+
+    .conteiner .expand.expanded .expand-click:after, .conteiner .box_10.expand.expanded .expand-click:after {
+      content: "";
+      position: absolute;
+      right: 10px;
+      top: 19px;
+      border: 5px;
+      border-color: transparent;
+      border-style: solid;
+      border-top-color: #333b43;
     }
 
   </style>
