--- a/privacy.html
+++ b/privacy.html
@@ -30,6 +30,7 @@
       padding: 0 10px;
       margin-bottom: 20px;
       cursor: pointer;
+      position: relative;
     }
     .conteiner {
       max-width: 1200px;
@@ -37,14 +38,14 @@
       padding: 0 10px;
     }
      .conteiner .expand.collapsed .expand-click:after {
-        content: "";
-        position: absolute;
-        right: 10px;
-        top: 17px;
-        border: 5px;
-        border-color: transparent;
-        border-style: solid;
-        border-right-color: #333b43;
+      content: "";
+      position: absolute;
+      right: 10px;
+      top: 7px;
+      border: 5px;
+      border-color: transparent;
+      border-style: solid;
+      border-right-color: #fff;
     }
 
     .conteiner .expand.expanded .expand-click:after, .conteiner .box_10.expand.expanded .expand-click:after {
