--- a/privacy.html
+++ b/privacy.html
@@ -52,11 +52,11 @@
       content: "";
       position: absolute;
       right: 10px;
-      top: 19px;
+      top: 25px;
       border: 5px;
       border-color: transparent;
       border-style: solid;
-      border-top-color: #333b43;
+      border-top-color: #fff;
     }
 
   </style>
