--- a/privacy.html
+++ b/privacy.html
@@ -32,6 +32,10 @@
       margin-bottom: 20px;
       cursor: pointer;
     }
+    .for_boxes li .box_primary h3 {
+      margin: 0;
+      padding: 15px 10px;
+    }
     .conteiner {
       max-width: 1200px;
       margin: 0 auto;
@@ -41,7 +45,7 @@
       content: "";
       position: absolute;
       right: 10px;
-      top: 25px;
+      top: 22px;
       border: 5px;
       border-color: transparent;
       border-style: solid;
@@ -52,7 +56,7 @@
       content: "";
       position: absolute;
       right: 10px;
-      top: 25px;
+      top: 22px;
       border: 5px;
       border-color: transparent;
       border-style: solid;
