--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
   .for_boxes li {
     list-style: none;
   }
-  .for_boxes li .box_primary {
+  .conteiner  .box_primary {
     position: relative;
     display: block;
     border: 1px solid #ccc;
@@ -32,7 +32,7 @@
     margin-bottom: 20px;
     cursor: pointer;
   }
-  .for_boxes li .box_primary h3 {
+  .conteiner  .box_primary h3 {
     margin: 0;
     padding: 15px 10px;
   }
@@ -511,7 +511,7 @@
           <h2 style="padding-top: 0;">Cookie Policy of www.iubenda.com</h2>
           <p>Cookies consist of portions of code installed in the browser that assist the Owner in providing the Service according to the purposes described. Some of the purposes for which Cookies are installed may also require the User's consent.</p>
           <p>Where the installation of Cookies is based on consent, such consent can be freely withdrawn at any time following the instructions provided in this document.</p>
-          <h4 id="technical_cookies">Technical Cookies and Cookies serving aggregated statistical purposes</h4>
+          <h3 id="technical_cookies">Technical Cookies and Cookies serving aggregated statistical purposes</h3>
           <ul class="for_boxes">
             <li>
               <div class="box_primary box_10 expand collapsed">
