--- a/privacy.html
+++ b/privacy.html
@@ -496,7 +496,8 @@
 
       <hr />
     </div>
-
+  </div>
+</div>
 
 
 
@@ -508,7 +509,7 @@
 
 
         <div class="one_line_col">
-          <h2 style="padding-top: 0;">Cookie Policy of www.iubenda.com</h2>
+          <h2 style="padding-top: 0;">Cookie Policy</h2>
           <p>Cookies consist of portions of code installed in the browser that assist the Owner in providing the Service according to the purposes described. Some of the purposes for which Cookies are installed may also require the User's consent.</p>
           <p>Where the installation of Cookies is based on consent, such consent can be freely withdrawn at any time following the instructions provided in this document.</p>
           <h3 id="technical_cookies">Technical Cookies and Cookies serving aggregated statistical purposes</h3>
