--- a/privacy.html
+++ b/privacy.html
@@ -504,25 +504,6 @@ In addition to any opt out offered by any of the services below, the User may op
 
 
 
-<div class="one_line_col">
-  <h2 style="padding-top: 0;">Cookie Policy of www.iubenda.com</h2>
-  <p>Cookies consist of portions of code installed in the browser that assist the Owner in providing the Service according to the purposes described. Some of the purposes for which Cookies are installed may also require the User's consent.</p>
-  <p>Where the installation of Cookies is based on consent, such consent can be freely withdrawn at any time following the instructions provided in this document.</p>
-    <h3 id="technical_cookies">Technical Cookies and Cookies serving aggregated statistical purposes</h3>
-    <ul class="for_boxes">
-        <li>
-          <div class="box_primary box_10 expand expanded">
-            <h3 class="expand-click w_icon_24 icon_general">Activity strictly necessary for the functioning of the Service</h3>
-            <div class="expand-content" style="display: block;">
-              <p>
-                This Application uses Cookies to save the User's session and to carry out other activities that are strictly necessary for the operation of this Application, for example in relation to the distribution of traffic.
-=======
-    </div>
-
-
-
-
-
 
 
     <div id="iubenda_policy">
@@ -530,7 +511,7 @@ In addition to any opt out offered by any of the services below, the User may op
 
 
         <div class="one_line_col">
-          <h2 style="padding-top: 0;">Cookie Policy of www.iubenda.com</h2>
+          <h2 style="padding-top: 0;">Cookie Policy</h2>
           <p>Cookies consist of portions of code installed in the browser that assist the Owner in providing the Service according to the purposes described. Some of the purposes for which Cookies are installed may also require the User's consent.</p>
           <p>Where the installation of Cookies is based on consent, such consent can be freely withdrawn at any time following the instructions provided in this document.</p>
           <h3 id="technical_cookies">Technical Cookies and Cookies serving aggregated statistical purposes</h3>
