--- a/privacy.html
+++ b/privacy.html
@@ -41,6 +41,7 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 10px;
+        padding-bottom: 10px;
   }
   .conteiner .expand.collapsed .expand-click:after {
     content: "";
