--- a/about.html
+++ b/about.html
@@ -52,7 +52,8 @@ apt. 47, 30A<br>
 Vazha-Pshavela Avenue<br>
 Tbilisi 0160<br>
 Georgia<br>
-Company. Reg no: N171480794
+Company ID: 405245104
+<br>
 <br>
 Tuky is an Agency Trade Desk for the MENA region.<br>
 Managed by perfomance & DR experts, we deliver results, such as:<br>
