--- a/about.html
+++ b/about.html
@@ -47,7 +47,9 @@
 				<div class="content__inner">
 					<h3 class="content__subtitle">About Us</h2>
 				</div>
-<p>Tuky Data Research Ltd., <br>
+<p>Tuky Data Research Ltd. / <br>
+Shps Tuki Data Riserchi<br>
+<br>
 apt. 47, 30A<br>
 Vazha-Pshavela Avenue<br>
 Tbilisi 0160<br>
