--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0" url="tel://+18777341979"> <html> <head>Redirect...</head> <body> <p>Please wait while we redirect you...</p> </body> </html>
+<meta http-equiv="Refresh" content="0" url="tel:+18777341979"> <html> <head>Redirect...</head> <body> <p>Please wait while we redirect you...</p> </body> </html>
