--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -1,1 +1,22 @@
-<meta http-equiv="Refresh" content="0" url="tel:+18777341979"> <html> <head>Redirect...</head> <body> <p>Please wait while we redirect you...</p> </body> </html>
+<!DOCTYPE html>
+  <head>
+    <meta charset="utf-8">
+    <title>Phone Call</title>
+    <link href="bootstrap.css" rel="stylesheet">
+    <meta http-equiv="refresh" content="5;URL='tel:1-123-456-7890'" />    
+  </head>
+  <body>
+    <div class="container">
+      <div class="header clearfix">
+        <h3 class="text-muted">Phone call Example</h3>
+      </div>
+      <div class="jumbotron">
+      	<p style="padding-bottom:20px;">In this example, the phone call will be initiated after 5 seconds. Please take a look at the source code of this example.
+
+      	If you want to redirect the user instantly, change the value preceeding the "URL" to 0:</p>
+
+      	<p><pre>&lt;meta http-equiv="refresh" content="<b>0</b>;URL='tel:1-123-456-7890'" /&gt;</pre></p>
+      </div>
+    </div>
+  </body>
+</html>
