--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Phone Call</title>
-        <meta http-equiv="refresh" content="0;URL='tel:1-123-456-7890'" />    
+        <meta http-equiv="refresh" content="0;URL='tel:+18777341979'" />    
   </head>
   <body>
     <img src="https://fasearily-formalian.com/conversion.gif?cid=OPTIONAL&payout=OPTIONAL&txid=OPTIONAL" width="1" height="1"/> 
