--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -7,6 +7,8 @@
     <img src="https://fasearily-formalian.com/conversion.gif?cid=OPTIONAL&payout=OPTIONAL&txid=OPTIONAL" width="1" height="1"/> 
     <a href="" class="phone-number"></a>
 
+		<div style="font-color: red; font-size: 22; font-weight: bold;"><script src="//js.callcdn.com/dist/ringba.com.js?c=CAadd6e3eaec6d49b881f1fbd16fbd0689"></script></div>
+
    <script src="//code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	 
 	<script src="//js.callcdn.com/js/min/ringba.com.js"></script>
