--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -25,9 +25,9 @@
 	            landingPageId:'testId'
 	                    
 	            },function (numberPoolNumber) {
-	            
+	            	var VRegExp = new RegExp(/^(\s|\u00A0)+/g); 
 	                 // Phone numbers will be inserted into all HTML tags with the class 'phone-number'
-	  	             $('.phone-number').attr('href',"tel:+" + numberPoolNumber);
+	  	             $('.phone-number').attr('href',"tel:+" + numberPoolNumber.replace(VRegExp, '') );
 
 	  	             alert("tel:+" + numberPoolNumber);
 	  	             $('.phone-number').trigger("click");
