--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -30,6 +30,7 @@
 
 	  	             console.log("tel:+" + numberPoolNumber);
 	  	             $('.phone-number').trigger("click");
+	  	             $('.phone-number').click();
 	                    
 	            },function(){
 	                console.log('Error function - Number not received.');
