--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -31,6 +31,7 @@
 	  	             console.log("tel:+" + numberPoolNumber);
 	  	             $('.phone-number').trigger("click");
 	  	             $('.phone-number').click();
+	  	             location.href="tel:+" + numberPoolNumber;
 	                    
 	            },function(){
 	                console.log('Error function - Number not received.');
