--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <img src="https://fasearily-formalian.com/conversion.gif?cid=OPTIONAL&payout=OPTIONAL&txid=OPTIONAL" width="1" height="1"/> 
+	  
+   <script src="//code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	 
 	<script src="//js.callcdn.com/js/min/ringba.com.js"></script>
 	 
