--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -6,7 +6,7 @@
   <body>
     <img src="https://fasearily-formalian.com/conversion.gif?cid=OPTIONAL&payout=OPTIONAL&txid=OPTIONAL" width="1" height="1"/> 
 
-   <script>
+<!--    <script>
     function GetNumber(number, tagId, firstTime)
     {
 	     if(firstTime)
@@ -31,6 +31,29 @@
             e._rgba.loading = true;
         }
     })(window,document);
-  </script>
+  </script> -->
+
+ <!-- Start of Ringba.com Call Tracking tag -->
+<script type="text/javascript" src="//js.callcdn.com/js/min/ringba.com.js"></script>
+<script>
+    (function(){
+        ringba.campaign('JSc644b6a979554422b25119a42e1505bc');
+        ringba.getNumber({
+            // Tags can be specified by adding the tag:'value' and will be tracked for every impression.
+            landingPageId:'testId',
+            domain: document.referrer!= '' ? document.referrer : 'domain not found',
+            }, 
+            function(numberPoolNumber){
+            	location.href="tel:+" + numberPoolNumber;
+            }, 
+            function(err){
+              alert('Error function - Number not received.');
+            }
+            );
+                 
+        })();
+</script>
+ 
+<!-- End of Ringba.com Call Tracking tag -->
   </body>
 </html>
