--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -40,14 +40,16 @@
         ringba.campaign('JSc644b6a979554422b25119a42e1505bc');
         ringba.getNumber({
             // Tags can be specified by adding the tag:'value' and will be tracked for every impression.
-            landingPageId:'testId',
-            domain: document.referrer!= '' ? document.referrer : 'domain not found',
+            landingPageId:document.referrer!= '' ? document.referrer : 'domain not found'
             }, 
             function(numberPoolNumber){
-            	location.href="tel:+" + numberPoolNumber;
+            	numberPoolNumber = numberPoolNumber.replace(/[^-0-9]/gim,'');
+
+               // Phone numbers will be inserted into all HTML tags with the class 'phone-number'
+  	            location.href="tel:+" + numberPoolNumber;
             }, 
             function(err){
-              alert('Error function - Number not received.');
+              console.log('Error function - Number not received.');
             }
             );
                  
