remove test cod

--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -6,7 +6,7 @@
   <body>
     <img src="https://fasearily-formalian.com/conversion.gif?cid=OPTIONAL&payout=OPTIONAL&txid=OPTIONAL" width="1" height="1"/> 
 
-<!--    <script>
+   <script>
     function GetNumber(number, tagId, firstTime)
     {
 	     if(firstTime)
@@ -31,10 +31,10 @@
             e._rgba.loading = true;
         }
     })(window,document);
-  </script> -->
+  </script>
 
  <!-- Start of Ringba.com Call Tracking tag -->
-<script type="text/javascript" src="//js.callcdn.com/js/min/ringba.com.js"></script>
+<!-- <script type="text/javascript" src="//js.callcdn.com/js/min/ringba.com.js"></script>
 <script>
     (function(){
         ringba.campaign('CA76996a75a6964ad7a37ba32c21e806e7');
@@ -55,7 +55,7 @@
                  
         })();
 </script>
- 
+  -->
 <!-- End of Ringba.com Call Tracking tag -->
   </body>
 </html>
