adw remarketing tag

--- a/ads/rdrctc.html
+++ b/ads/rdrctc.html
@@ -2,6 +2,15 @@
   <head>
     <meta charset="utf-8">
     <title>Phone Call</title>  
+	<!-- Global site tag (gtag.js) - AdWords: 794718358 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-794718358"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-794718358');
+</script>
   </head>
   <body>
     <img src="https://fasearily-formalian.com/conversion.gif?cid=OPTIONAL&payout=OPTIONAL&txid=OPTIONAL" width="1" height="1"/> 
