--- a/privacy.html
+++ b/privacy.html
@@ -1496,8 +1496,13 @@ US
 
   <h3 id="owner_of_the_data">Owner and Data Controller</h3>
 
-          <p>iubenda srl - Via Torino 2 - 20123 - Milan (Italy)</p>
-          <p><b>Owner contact email:</b> info@iubenda.com</p>
+	<p>Tuky Data Research Ltd., <br>
+	apt. 47, 30A<br>
+	Vazha-Pshavela Avenue<br>
+	Tbilisi 0160<br>
+	Georgia<br>
+	Company. Reg no: N171480794
+	</p>
         <p>
           Since the installation of third-party Cookies and other tracking systems through the services used within this Application cannot be technically controlled by the Owner, any specific references to Cookies and tracking systems installed by third parties are to be considered indicative. In order to obtain complete information, the User is kindly requested to consult the privacy policy for the respective third-party services listed in this document.
         </p>
