--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<a href="/">
 						<img src="img/logo.png"  class="codrops-header__title">
 					</a>
-						<p>Theoretical uniform distribution & Ky</p>
+						<p>ai development outsourcing</p>
 					
 				</header>
 				
