--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tuky Software development</title>
+    <title>Tuky Data Research</title>
     <meta name="description" content="Data modeling and ai research" />
     <meta name="keywords" content="ai, ML, data modeling, data science" />
     <meta name="author" content="Tuky.net" />
@@ -79,7 +79,7 @@
           <a href="/">
             <img src="img/logo.png"  class="codrops-header__title">
           </a>
-            <p>Theoretical uniform distribution & Ky</p>
+            <p>ai development outsourcing</p>
           
         </header>
         
