--- a/news.html
+++ b/news.html
@@ -69,7 +69,7 @@ h3 {text-align: center;}
 						<a href="/">
 							<img src="img/logo.png"  class="codrops-header__title">
 						</a>
-							<p>Theoretical uniform distribution & Ky</p>
+							<p>ai development outsourcing</p>
 						
 					</header>
 					<nav class="codrops-links header-links">
