--- a/ctc/index.html
+++ b/ctc/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>click-to-call demo</title>
-    <link rel="stylesheet" type="text/css" href="../placements/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <meta name="viewport" content="width=device-widh, initial-scale=1, viewport-fit=cover">
 <script type="text/javascript">
     var gifSource = $('#gif_animata').attr('src'); //get the source in the var
